mise en place sass

--- a/mention_legal.html
+++ b/mention_legal.html
@@ -25,12 +25,17 @@
 
         <main>
             <p>BLA BLA BLA</p>
+
+            <section class="futur">
+                <a href="index.html"><p>Retour</p></a>
+            </section>
+            
         </main>
 
-            <footer>
-                <a href="contact.html"><p>Contactez-nous</p></a>
-                <a href="index.html"><p>Index</p></a>
-            </footer>
+        <footer>
+            <a href="mention_legal.html">Mention Legal</a>
+            <a href="mailto:ohmyfood@hotmail.com">Contactez-nous</a>                
+        </footer>
        
     </body>
 </html>
