--- a/menu_3.html
+++ b/menu_3.html
@@ -4,7 +4,6 @@
     <head>
         <!-- Primary Meta -->
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">        
 
         <!-- Page Title -->
         <title>ohmyfood</title>
@@ -21,7 +20,7 @@
 
     <body>        
         <header>
-            <h1>ohmyfood</h1>              
+            <a href="index.html"><h1>ohmyfood</h1></a>              
         </header>  
 
         <main>              
@@ -33,16 +32,15 @@
             </section>
 
             <section class="futur">
-                <p>Retour</p>
+                <a href="index.html"><p>Retour</p></a>
             </section>
             
 
         </main>  
-            <footer>
-                Mention Legal
-
-                Contactez-nous
-            </footer>
+        <footer>
+            <a href="mention_legal.html">Mention Legal</a>
+            <a href="mailto:ohmyfood@hotmail.com">Contactez-nous</a>                
+        </footer>
        
     </body>
 </html>
