--- a/menu_1.html
+++ b/menu_1.html
@@ -24,10 +24,11 @@
             <a href="index.html"><h1>ohmyfood</h1></a>            
         </header>  
 
-        <main>              
+        <main class="main">              
             <section>
+                <p class="menu_name">La note enchantée</p>
                 <figure>              
-                    <img class="Menu" src="img/Menus/menu-1b.png" alt="Menu 1" title="Menu 1">
+                    <img src="img/Menus/menu-1b.png" alt="Menu 1" title="Menu 1">
                 </figure>    
                
             </section>
@@ -38,8 +39,8 @@
             
 
             <footer>
-                <a href="mention_legal.html">Mention Legal</a>
-                <a href="mailto:ohmyfood@hotmail.com">Contactez-nous</a>                
-            </footer>
+                <a href="mentions_legales.html">Mentions légales</a>
+                <a href="mailto:ohmyfood@hotmail.com">Contactez-nous</a>              
+            </footer>  
     </body>
 </html>
