--- a/menu_2.html
+++ b/menu_2.html
@@ -38,9 +38,9 @@
 
         </main>  
         <footer>
-            <a href="mention_legal.html">Mention Legal</a>
-            <a href="mailto:ohmyfood@hotmail.com">Contactez-nous</a>                
-        </footer>
+            <a href="mentions_legales.html">Mentions légales</a>
+            <a href="mailto:ohmyfood@hotmail.com">Contactez-nous</a>              
+        </footer>  
        
     </body>
 </html>
