--- a/mentions_legales.html
+++ b/mentions_legales.html
@@ -20,8 +20,8 @@
 
     <body>        
         <header>
-            <h1>ohmyfood</h1>              
-        </header>  
+            <a href="index.html"><h1>ohmyfood</h1></a>        
+        </header>   
 
         <main>
             <p>BLA BLA BLA</p>
@@ -33,8 +33,9 @@
         </main>
 
         <footer>
-            <a href="mailto:ohmyfood@hotmail.com">Contactez-nous</a>                
-        </footer>
+            <a href="mentions_legales.html">Mentions légales</a>
+            <a href="mailto:ohmyfood@hotmail.com">Contactez-nous</a>              
+        </footer>   
        
     </body>
 </html>
