--- a/menu_1.html
+++ b/menu_1.html
@@ -24,16 +24,16 @@
             <a href="index.html"><h1>ohmyfood</h1></a>            
         </header>  
 
-        <main class="main">              
+        <main>              
             <section>
                 <p class="menu_name">La note enchantée</p>
                 <figure>              
-                    <img src="img/Menus/menu-1b.png" alt="Menu 1" title="Menu 1">
+                    <img class="menu_img--mod" src="img/Menus/menu-1b.png" alt="Menu 1" title="Menu 1">
                 </figure>    
                
             </section>
 
-            <section class="futur">
+            <section class="btn">
                 <a href="index.html"><p>Retour</p></a>
             </section>
             
@@ -42,5 +42,6 @@
                 <a href="mentions_legales.html">Mentions légales</a>
                 <a href="mailto:ohmyfood@hotmail.com">Contactez-nous</a>              
             </footer>  
+        </main>
     </body>
 </html>
