--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
                         
             <section>
                 <figure>              
-                    <a href="menu_1.html"><img class="menu_img" src="img/menus/menu-1a.png" alt="Menu 1" title="Menu 1"></a>
+                    <a href="menu_1.html"><img class="menu_img" src="img/menus/menu-1a.png" alt="Menu 1" title="La note enchantée"></a>
                 </figure>
             </section>
             <section>
                 <figure>         
-                    <a href="menu_2.html"><img class="menu_img" src="img/Menus/menu-2a.png" alt="Menu 2" title="Menu 2"></a>
+                    <a href="menu_2.html"><img class="menu_img" src="img/Menus/menu-2a.png" alt="Menu 2" title="Le chic a la francaise"></a>
                 </figure>    
             </section>
             <section>
                 <figure>           
-                    <a href="menu_3.html"><img class="menu_img" src="img/Menus/menu-3a.png" alt="Menu 3" title="Menu 3"></a>                
+                    <a href="menu_3.html"><img class="menu_img" src="img/Menus/menu-3a.png" alt="Menu 3" title="Le délice des papilles"></a>                
                 </figure>    
             </section>
             <section>
                 <figure>          
-                    <a href="menu_4.html"><img class="menu_img" src="img/Menus/menu-4a.png" alt="Menu 4" title="Menu 4"></a>
+                    <a href="menu_4.html"><img class="menu_img" src="img/Menus/menu-4a.png" alt="Menu 4" title="La palette du goût"></a>
                 </figure>
             </section>
 
@@ -51,7 +51,7 @@
 
         </main>  
 
-        <section class="futur">
+        <section class="btn">
             <p>Prochainement</p>
         </section>
         
