--- a/contact.html
+++ b/contact.html
@@ -59,8 +59,8 @@
 
         </main>  
         <footer>
-            <a href="mentions_legales.html">Mentions légales</a>
-            <a href="mailto:ohmyfood@hotmail.com">Contactez-nous</a>              
+            <button type="button"><a href="mentions_legales.html">Mentions légales</a></button>
+            <button type="button"><a href="mailto:ohmyfood@hotmail.com">Contactez-nous</a></button>            
         </footer>  
        
     </body>
