--- a/mentions_legales.html
+++ b/mentions_legales.html
@@ -26,16 +26,14 @@
         <main>
             <p>BLA BLA BLA</p>
 
-            <section class="futur">
-                <a href="index.html"><p>Retour</p></a>
-            </section>
+            <button class="btn_main" type="button" onclick="window.location.href='index.html'">Retour</button>
             
         </main>
 
         <footer>
-            <a href="mentions_legales.html">Mentions légales</a>
-            <a href="mailto:ohmyfood@hotmail.com">Contactez-nous</a>              
-        </footer>   
+            <button class="btn_foot" type="button" onclick="window.location.href='mentions_legales.html'">Mentions légales</button>
+            <button class="btn_foot" type="button" onclick="window.location.href='mailto:ohmyfood@hotmail.com'">Contactez-nous</button>            
+        </footer>       
        
     </body>
 </html>
