--- a/menu_2.html
+++ b/menu_2.html
@@ -23,24 +23,20 @@
             <a href="index.html"><h1>ohmyfood</h1></a>            
         </header>  
 
-        <main>              
-            <section>
-                <p class="menu_name">Le chic à la française</p>
-                <figure>              
-                    <img class="menu_img--mod" src="img/Menus/menu-2b.png" alt="Menu 2" title="Menu 2">
-                </figure>    
-               
-            </section>
+        <main>    
 
-            <section class="btn">
-                <a href="index.html"><p>Retour</p></a>
-            </section>
-            
+            <p class="menu_name">Le chic à la française</p>
+            <figure>              
+                <img class="menu_img--mod" src="img/Menus/menu-2b.png" alt="Menu 2" title="Menu 2">
+            </figure>    
 
-            <footer>
-                <a href="mentions_legales.html">Mentions légales</a>
-                <a href="mailto:ohmyfood@hotmail.com">Contactez-nous</a>              
-            </footer>  
+            <button class="btn_main" type="button" onclick="window.location.href='index.html'">Retour</button>
+
         </main>
+
+        <footer>
+            <button class="btn_foot" type="button" onclick="window.location.href='mentions_legales.html'">Mentions légales</button>
+            <button class="btn_foot" type="button" onclick="window.location.href='mailto:ohmyfood@hotmail.com'">Contactez-nous</button>            
+        </footer> 
     </body>
 </html>
