--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="fr">
 
     <head>
         <!-- Primary Meta -->
         <meta charset="utf-8">
-            
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">       
 
         <!-- Page Title -->
         <title>ohmyfood</title>
@@ -26,7 +26,8 @@
         <main class="main_index">                       
            
             <figure>              
-                <a href="menu_1.html"><img class="menu_img" src="img/menus/menu-1a.png" alt="Menu 1" title="La note enchantée"></a>
+                <a href="menu_1.html">
+                    <img class="menu_img" src="img/menus/menu-1a.png" alt="Menu 1" title="La note enchantée"></a>
             </figure>        
             <figure>         
                 <a href="menu_2.html"><img class="menu_img" src="img/Menus/menu-2a.png" alt="Menu 2" title="Le chic a la francaise"></a>
