add underline on title
add center in css base

--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
            
             <figure>              
                 <a href="view\menu_1b.html">
-                    <img class="menu_img" src="img/menus/menu-1a.png" alt="Menu 1" title="La note enchantée">
+                    <img class="scale_img" src="img/menus/menu-1a.png" alt="Menu 1" title="La note enchantée">
                 </a>
             </figure>        
             <figure>         
                 <a href="menu_2.html">
-                    <img class="menu_img" src="img/Menus/menu-2a.png" alt="Menu 2" title="Le chic a la francaise">
+                    <img class="scale_img" src="img/Menus/menu-2a.png" alt="Menu 2" title="Le chic a la francaise">
                 </a>
             </figure>
             <figure>           
                 <a href="menu_3.html">
-                    <img class="menu_img" src="img/Menus/menu-3a.png" alt="Menu 3" title="Le délice des papilles">
+                    <img class="scale_img" src="img/Menus/menu-3a.png" alt="Menu 3" title="Le délice des papilles">
                 </a>                
             </figure> 
             <figure>          
                 <a href="menu_4.html">
-                    <img class="menu_img" src="img/Menus/menu-4a.png" alt="Menu 4" title="La palette du goût">
+                    <img class="scale_img" src="img/Menus/menu-4a.png" alt="Menu 4" title="La palette du goût">
                 </a>
             </figure>
 
