--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </a>
             </figure>
 
-            <a class="btn">Prochainement</a>
+            <a class="btn center">Prochainement</a>
 
         </main>  
 
