mise en page @media

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     </head>
 
     <body>        
-        <header>
+        <header class="header_top">
             <a href="index.html"><h1>ohmyfood</h1></a>        
         </header> 
 
-        <main>                       
+        <main class="flexbox">                       
            <div class="flexbox">
                 <figure>              
                     <a href="view\menu_1b.html">
