--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         <main class="flexbox">                       
            <div class="flexbox">
                 <figure>              
-                    <a href="view\menu_1b.html">
+                    <a href="view/menu_1b.html">
                         <img class="scale_img" src="img/menus/menu-1a.png" alt="Menu 1" title="La note enchantée">
                     </a>
                 </figure>        
                 <figure>         
-                    <a href="menu_2.html">
+                    <a href="view/menu_2b.html">
                         <img class="scale_img" src="img/Menus/menu-2a.png" alt="Menu 2" title="Le chic a la francaise">
                     </a>
                 </figure>
