--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
             </div>
             <div class="flexbox">
                 <figure>           
-                    <a href="menu_3.html">
+                    <a href="view/menu_3b.html">
                         <img class="scale_img" src="img/Menus/menu-3a.png" alt="Menu 3" title="Le délice des papilles">
                     </a>                
                 </figure> 
                 <figure>          
-                    <a href="menu_4.html">
+                    <a href="view/menu_4b.html">
                         <img class="scale_img" src="img/Menus/menu-4a.png" alt="Menu 4" title="La palette du goût">
                     </a>
                 </figure>
