--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
 
     <body>        
         <header class="header_top">
-            <a href="index.html"><h1>ohmyfood</h1></a>        
+            <a href="index.html">
+                <h1>ohmyfood</h1>
+            </a>        
         </header> 
 
         <main class="flexbox">                       
-           <div class="flexbox">
+           <figure class="flexbox">
                 <figure>              
                     <a href="view/menu_1b.html">
                         <img class="scale_img" src="img/menus/menu-1a.png" alt="Menu 1" title="La note enchantée">
@@ -35,8 +37,8 @@
                         <img class="scale_img" src="img/Menus/menu-2a.png" alt="Menu 2" title="Le chic a la francaise">
                     </a>
                 </figure>
-            </div>
-            <div class="flexbox">
+           </figure>
+            <figure class="flexbox">
                 <figure>           
                     <a href="view/menu_3b.html">
                         <img class="scale_img" src="img/Menus/menu-3a.png" alt="Menu 3" title="Le délice des papilles">
@@ -47,10 +49,7 @@
                         <img class="scale_img" src="img/Menus/menu-4a.png" alt="Menu 4" title="La palette du goût">
                     </a>
                 </figure>
-            </div>
-
-            
-
+            </figure>
         </main>  
 
         <a class="btn">Prochainement</a>
