--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </figure>
         </main>  
 
-        <a class="btn">Prochainement</a>
+        <a class="btn" href="view/prochainement.html">Prochainement</a>
         
         <footer>
             <a class="btn_foot" href="view/mentions_legales.html">Mentions légales</a>
