suppression img index

--- a/index.html
+++ b/index.html
@@ -26,30 +26,30 @@
         </header> 
 
         <main class="flexbox">                       
-           <figure class="flexbox">
-                <figure>              
-                    <a href="view/menu_1b.html">
-                        <img class="scale_img" src="img/menus/menu-1a.png" alt="Menu 1" title="La note enchantée">
-                    </a>
-                </figure>        
-                <figure>         
-                    <a href="view/menu_2b.html">
-                        <img class="scale_img" src="img/Menus/menu-2a.png" alt="Menu 2" title="Le chic a la francaise">
-                    </a>
-                </figure>
-           </figure>
-            <figure class="flexbox">
-                <figure>           
-                    <a href="view/menu_3b.html">
-                        <img class="scale_img" src="img/Menus/menu-3a.png" alt="Menu 3" title="Le délice des papilles">
-                    </a>                
-                </figure> 
-                <figure>          
-                    <a href="view/menu_4b.html">
-                        <img class="scale_img" src="img/Menus/menu-4a.png" alt="Menu 4" title="La palette du goût">
-                    </a>
-                </figure>
-            </figure>
+            <section class="rectangle-menu color_menu--bg1">
+                <a class="style_menu1" href="view/menu_1b.html">
+                    <h2>La note enchantée</h2>
+                    <h3>Menu</h3>
+                </a>
+            </section>        
+            <section class="rectangle-menu color_menu--bg2">              
+                <a class="style_menu2" href="view/menu_2b.html">
+                    <h2>Le chic a la francaise</h2>
+                    <h3>Menu</h3>
+                </a>
+            </section>
+            <section class="rectangle-menu color_menu--bg3">              
+                <a class="style_menu3" href="view/menu_3b.html">
+                    <h2>Le délice des papilles</h2>
+                    <h3>Menu</h3>
+                </a>                
+            </section> 
+            <section class="rectangle-menu color_menu--bg4">              
+                <a class="style_menu4" href="view/menu_4b.html">
+                    <h2>La palette du goût</h2>
+                    <h3>Menu</h3>
+                </a>
+            </section>
         </main>  
 
         <a class="btn" href="view/prochainement.html">Prochainement</a>
