--- a/index.html
+++ b/index.html
@@ -26,25 +26,25 @@
         </header> 
 
         <main class="flexbox">                       
-            <section class="rectangle-menu color_menu--bg1">
+            <section class="scale_img shadow-box flex_center rectangle-menu color_menu--bg1">
                 <a class="style_menu1" href="view/menu_1b.html">
                     <h2>La note enchantée</h2>
                     <h3>Menu</h3>
                 </a>
             </section>        
-            <section class="rectangle-menu color_menu--bg2">              
+            <section class="scale_img shadow-box flex_center rectangle-menu color_menu--bg2">              
                 <a class="style_menu2" href="view/menu_2b.html">
                     <h2>Le chic a la francaise</h2>
                     <h3>Menu</h3>
                 </a>
             </section>
-            <section class="rectangle-menu color_menu--bg3">              
+            <section class="scale_img shadow-box flex_center rectangle-menu color_menu--bg3">              
                 <a class="style_menu3" href="view/menu_3b.html">
                     <h2>Le délice des papilles</h2>
                     <h3>Menu</h3>
                 </a>                
             </section> 
-            <section class="rectangle-menu color_menu--bg4">              
+            <section class="scale_img shadow-box flex_center rectangle-menu color_menu--bg4">              
                 <a class="style_menu4" href="view/menu_4b.html">
                     <h2>La palette du goût</h2>
                     <h3>Menu</h3>
@@ -52,7 +52,7 @@
             </section>
         </main>  
 
-        <a class="btn" href="view/prochainement.html">Prochainement</a>
+        <a class="btn">Prochainement<span class="dot one">.</span><span class="dot two">.</span><span class="dot three">.</span></a>
         
         <footer>
             <a class="btn_foot" href="view/mentions_legales.html">Mentions légales</a>
