change description index

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <title>ohmyfood</title>
 
         <!-- Secondary Meta -->
-        <meta name="description" content="Menu ohmyfood">
+        <meta name="description" content="ohmyfood- Les menus des plus grands restaurants new-yorkais">
         <meta name="author" content="Jonathan Roza" />
         <meta name="copyright"   content="MIT">
 
