--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
                 </a>
             </section>        
             <section class="scale_img shadow-box flex_center rectangle-menu color_menu--bg2">              
-                <a class="style_menu2" href="view/menu_2b.html">
+                <a class="style_title-two" href="view/menu_2b.html">
                     <h2>Le chic a la francaise</h2>
                     <h3>Menu</h3>
                 </a>
             </section>
             <section class="scale_img shadow-box flex_center rectangle-menu color_menu--bg3">              
-                <a class="style_menu3" href="view/menu_3b.html">
+                <a class="style_title-three" href="view/menu_3b.html">
                     <h2>Le délice des papilles</h2>
                     <h3>Menu</h3>
                 </a>                
             </section> 
             <section class="scale_img shadow-box flex_center rectangle-menu color_menu--bg4">              
-                <a class="style_menu4" href="view/menu_4b.html">
+                <a class="style_title-four" href="view/menu_4b.html">
                     <h2>La palette du goût</h2>
                     <h3>Menu</h3>
                 </a>
