--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <meta name="copyright"   content="MIT">
 
         <!-- Stylesheets -->
-        <link rel="stylesheet" href="css/style.css">             
+        <link rel="stylesheet" href="css/style.css">  
+        <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
+           
     </head>
 
     <body>        
@@ -26,8 +28,11 @@
         </header> 
 
         <main class="flexbox">                       
-            <section class="scale_img shadow-box flex_center rectangle-menu color_menu--bg1">
+            <section class="scale_img shadow-box txt_center rectangle-menu color_menu--bg1">
                 <a class="style_menu1" href="view/menu_1b.html">
+                    <div class="margin_top">
+                        <i class="flex_center note--color  fas fa-music"></i>
+                    </div> 
                     <h2>La note enchantée</h2>
                     <h3>Menu</h3>
                 </a>
