--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         </header> 
 
         <main class="flexbox">                       
-            <section class="scale_img shadow-box txt_center rectangle-menu color_menu--bg1">
+            <section class="scale_img shadow-box flex_center rectangle-menu color_menu--bg1">
                 <a class="style_menu1" href="view/menu_1b.html">
                     <div class="margin_top">
-                        <i class="flex_center note--color  fas fa-music"></i>
+                        <i class="note--color fas fa-music"></i>
                     </div> 
                     <h2>La note enchantée</h2>
                     <h3>Menu</h3>
