--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <main class="flexbox">                       
             <section class="scale_img shadow-box flex_center rectangle-menu color_menu--bg1">
                 <a class="style_menu1" href="view/menu_1b.html">
-                    <div class="margin_top">
+                    <div class="margin_top txt_center">
                         <i class="note--color fas fa-music"></i>
                     </div> 
                     <h2>La note enchantée</h2>
