alignement menu et font size menu

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <section class="scale_img shadow-box flex_center rectangle-menu color_menu--bg1">
                 <a class="style_menu1" href="view/menu_1b.html">
                     <div class="txt_center">
-                        <i class="note--color fas fa-music"></i>
+                        <i class="note-color fas fa-music"></i>
                     </div> 
                     <h2 class="margin_null">La note enchantée</h2>
                     <h3>Menu</h3>
