--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
         <title>ohmyfood</title>
 
         <!-- Secondary Meta -->
-        <meta name="description" content="ohmyfood- Les menus des plus grands restaurants new-yorkais">
+        <meta name="description" content="Projet Numéro 3 d'OpenClassRooms : ohmyfood - Les menus des plus grands restaurants new-yorkais">
+        <meta name="keywords" content="restaurant, new-york, menu"/>
         <meta name="author" content="Jonathan Roza" />
         <meta name="copyright"   content="MIT">
+        <meta name="robots" content="follow"/>
 
         <!-- Stylesheets -->
         <link rel="stylesheet" href="css/style.css">  
@@ -55,10 +57,9 @@
                     <h3>Menu</h3>
                 </a>
             </section>
+            <a class="btn">Prochainement<span class="dot one">.</span><span class="dot two">.</span><span class="dot three">.</span></a>
         </main>  
 
-        <a class="btn">Prochainement<span class="dot one">.</span><span class="dot two">.</span><span class="dot three">.</span></a>
-        
         <footer>
             <a class="btn_foot" href="view/mentions_legales.html">Mentions légales</a>
             <a class="btn_foot" href="mailto:ohmyfood@hotmail.com">Contactez-nous</a>            
