--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 
         <!-- Stylesheets -->
         <link rel="stylesheet" href="css/style.css">  
-        <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
-           
+        <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">           
     </head>
 
     <body>        
@@ -57,7 +56,9 @@
                     <h3>Menu</h3>
                 </a>
             </section>
-            <a class="btn">Prochainement<span class="dot one">.</span><span class="dot two">.</span><span class="dot three">.</span></a>
+            <div>
+                <a class="btn">Prochainement<span class="dot one">.</span><span class="dot two">.</span><span class="dot three">.</span></a>
+            </div>            
         </main>  
 
         <footer>
