--- a/index.html
+++ b/index.html
@@ -28,37 +28,37 @@
             </a>        
         </header> 
 
-        <main class="flexbox">                    
-            <section class="scale_img shadow-box flex_center rectangle-menu color_menu--bg1">
-                <a class="style_menu1 rectangle-menu flex_column flex_center" href="view/menu_1b.html">
-                    <div class="txt_center">
-                        <i class="note-color fas fa-music"></i>
-                    </div> 
-                    <h2 class="margin_null">La note enchantée</h2>
-                    <h3>Menu</h3>
-                </a>
-            </section>  
-            <section class="scale_img shadow-box flex_center rectangle-menu color_menu--bg2">              
-                <a class="style_title-two rectangle-menu flex_column flex_center" href="view/menu_2b.html">
-                    <h2>Le chic a la francaise</h2>
-                    <h3>Menu</h3>
-                </a>
-            </section>
-            <section class="scale_img shadow-box flex_center rectangle-menu color_menu--bg3">              
-                <a class="style_title-three rectangle-menu flex_column flex_center" href="view/menu_3b.html">
-                    <h2>Le délice des papilles</h2>
-                    <h3>Menu</h3>
-                </a>                
-            </section> 
-            <section class="scale_img shadow-box flex_center rectangle-menu color_menu--bg4">              
-                <a class="style_title-four rectangle-menu flex_column flex_center" href="view/menu_4b.html">
-                    <h2>La palette du goût</h2>
-                    <h3>Menu</h3>
-                </a>
-            </section>
-            <div>
-                <a class="btn">Prochainement<span class="dot one">.</span><span class="dot two">.</span><span class="dot three">.</span></a>
-            </div>            
+        <main>  
+            <div class="flexbox">                  
+                <section class="scale_img shadow-box flex_center rectangle-menu color_menu--bg1">
+                    <a class="style_menu1 rectangle-menu flex_column flex_center" href="view/menu_1b.html">
+                        <div class="txt_center">
+                            <i class="note-color fas fa-music"></i>
+                        </div> 
+                        <h2 class="margin_null">La note enchantée</h2>
+                        <h3>Menu</h3>
+                    </a>
+                </section>  
+                <section class="scale_img shadow-box flex_center rectangle-menu color_menu--bg2">              
+                    <a class="style_title-two rectangle-menu flex_column flex_center" href="view/menu_2b.html">
+                        <h2>Le chic a la francaise</h2>
+                        <h3>Menu</h3>
+                    </a>
+                </section>
+                <section class="scale_img shadow-box flex_center rectangle-menu color_menu--bg3">              
+                    <a class="style_title-three rectangle-menu flex_column flex_center" href="view/menu_3b.html">
+                        <h2>Le délice des papilles</h2>
+                        <h3>Menu</h3>
+                    </a>                
+                </section> 
+                <section class="scale_img shadow-box flex_center rectangle-menu color_menu--bg4">              
+                    <a class="style_title-four rectangle-menu flex_column flex_center" href="view/menu_4b.html">
+                        <h2>La palette du goût</h2>
+                        <h3>Menu</h3>
+                    </a>
+                </section>           
+            </div>  
+            <a class="btn">Prochainement<span class="dot one">.</span><span class="dot two">.</span><span class="dot three">.</span></a>          
         </main>  
 
         <footer>
