--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <meta name="robots" content="follow"/>
 
         <!-- Stylesheets -->
-        <link rel="stylesheet" href="css/style.css">  
-        <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">           
+        <link rel="stylesheet" href="css/style.css" type="text/css">  
+        <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css" type="text/css">           
     </head>
 
     <body>        
@@ -28,7 +28,7 @@
             </a>        
         </header> 
 
-        <main>  
+        <main class="size-main_index">  
             <div class="flexbox">                  
                 <section class="scale_img shadow-box flex_center rectangle-menu color_menu--bg1">
                     <a class="style_menu1 rectangle-menu flex_column flex_center" href="view/menu_1b.html">
@@ -41,8 +41,8 @@
                 </section>  
                 <section class="scale_img shadow-box flex_center rectangle-menu color_menu--bg2">              
                     <a class="style_title-two rectangle-menu flex_column flex_center" href="view/menu_2b.html">
-                        <h2>Le chic a la francaise</h2>
-                        <h3>Menu</h3>
+                        <h2 class="font-size_menu2">Le chic a la francaise</h2>
+                        <h3 class="font-size_menu2">Menu</h3>
                     </a>
                 </section>
                 <section class="scale_img shadow-box flex_center rectangle-menu color_menu--bg3">              
