--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </section>  
                 <section class="scale_img shadow-box flex_center rectangle-menu color_menu--bg2">              
                     <a class="style_title-two rectangle-menu flex_column flex_center" href="view/menu_2b.html">
-                        <h2 class="font-size_menu2">Le chic a la francaise</h2>
+                        <h2 class="font-size_menu2">Le chic a la française</h2>
                         <h3 class="font-size_menu2">Menu</h3>
                     </a>
                 </section>
